# postgres-rust

./: .gitignore  Cargo.toml  notes.md
parser/: Cargo.toml
parser/ast/: Cargo.toml
parser/ast/src/: aggregate_with_args.rs  alias.rs  alter_database_set_stmt.rs  alter_database_stmt.rs  alter_default_privileges_stmt.rs  alter_event_trig_stmt.rs  alter_extension_contents_stmt.rs  alter_extension_stmt.rs  alter_function_stmt.rs  alter_object_depends_stmt.rs  alter_object_schema_stmt.rs  alter_owner_stmt.rs  alter_role_option.rs  alter_role_set_stmt.rs  alter_role_stmt.rs  alter_system_stmt.rs  alter_user_mapping_stmt.rs  binary_expr.rs  bool_expr.rs  boolean_or_string.rs  case_expr.rs  column_ref.rs  comment_stmt.rs  constraints_set_stmt.rs  create_access_method_stmt.rs  create_cast_stmt.rs  create_conversion_stmt.rs  create_database_stmt.rs  create_role_option.rs  create_role_stmt.rs  create_user_mapping_stmt.rs  createdb_option_value.rs  database_stmt.rs  defaultable_value.rs  discard_stmt.rs  extract_expr.rs  frame_extent.rs  func_alias.rs  func_arg_expr.rs  func_args_kind.rs  (+100 more)
parser/check-point-stmt/: Cargo.toml
parser/check-point-stmt/src/: lib.rs
parser/close-stmt/: Cargo.toml
parser/close-stmt/src/: lib.rs
parser/collation-stmt/: Cargo.toml
parser/collation-stmt/src/: alter.rs
parser/combinators/: Cargo.toml
parser/combinators/src/: alt.rs  and.rs  between.rs  bit_string.rs  combinator.rs  context.rs  identifier.rs  integer.rs  keyword.rs  lib.rs  located.rs  many.rs  map.rs  number.rs  operator.rs  optional.rs  or.rs  param.rs  parser.rs  seq.rs  skip.rs  string.rs  tests.rs  user_defined_operator.rs
parser/conversion-stmt/: Cargo.toml
parser/core/: Cargo.toml
parser/core/src/: config.rs  context.rs  lib.rs  result.rs
parser/database-stmt/: Cargo.toml
parser/database-stmt-ast/: Cargo.toml
parser/database-stmt-ast/src/: alter_database_stmt.rs  alterdb_option.rs  alterdb_option_kind.rs  create_database_stmt.rs  createdb_option.rs  createdb_option_kind.rs  createdb_option_value.rs  database_stmt.rs  lib.rs
parser/database-stmt/src/: alter.rs  create.rs  lib.rs
parser/error/: Cargo.toml
parser/error/src/: located_error_report.rs  parse_report.rs
parser/event-trigger-stmt/: Cargo.toml
parser/event-trigger-stmt/src/: alter.rs
parser/generic-options-ast/: Cargo.toml
parser/generic-options-ast/src/: generic_option_kind.rs  lib.rs
parser/generic-options-combinators/: Cargo.toml
parser/generic-options-combinators/src/: alter_generic_options.rs  create_generic_options.rs  generic_option.rs  lib.rs
parser/generic-set-ast/: Cargo.toml
parser/generic-set-ast/src/: lib.rs  set_rest.rs  set_rest_more.rs  var_value.rs  zone_value.rs
parser/generic-set-combinators/: Cargo.toml
parser/generic-set-combinators/src/: all_or_var_name.rs  generic_set_tail.rs  lib.rs  var_value.rs  variable_target.rs
parser/identifier-combinators/: Cargo.toml
parser/identifier-combinators/src/: any_name.rs  attrs.rs  col_id.rs  col_label.rs  lib.rs  non_reserved_word.rs  qualified_name.rs  var_name.rs
parser/interval-ast/: Cargo.toml
parser/interval-ast/src/: lib.rs
parser/interval-combinators/: Cargo.toml
parser/interval-combinators/src/: lib.rs
parser/language-stmt/: Cargo.toml
parser/language-stmt/src/: alter.rs
parser/large-object-stmt/: Cargo.toml
parser/large-object-stmt/src/: alter.rs
parser/lexer/: Cargo.toml
parser/lexer/src/: lib.rs  token_kind.rs
parser/parser/: Cargo.toml
parser/parser/src/: config.rs  context.rs  lib.rs  parser.rs  tests.rs
parser/reset-stmt/: Cargo.toml
parser/role-ast/: Cargo.toml
parser/role-ast/src/: alter_role_option.rs  alter_role_stmt.rs  alter_user_mapping_stmt.rs  create_role_option.rs  create_role_stmt.rs  create_user_mapping_stmt.rs  lib.rs
parser/role-stmt/: Cargo.toml
parser/role-stmt/src/: alter_role_option.rs  auth_ident.rs  create_role_option.rs  lib.rs
parser/sink-ast/: Cargo.toml
parser/sink-ast/src/: add_drop.rs  lib.rs  one_or_all.rs  relation_name.rs  role_spec.rs  value_or_default.rs
parser/sink-combinators/: Cargo.toml
parser/sink-combinators/src/: add_drop.rs  analyze_keyword.rs  any_name.rs  attrs.rs  bare_col_label.rs  boolean_or_string.rs  col_id.rs  col_label.rs  const_numeric.rs  drop_behavior.rs  i32_literal_paren.rs  if_exists.rs  if_not_exists.rs  lib.rs  non_reserved_word.rs  non_reserved_word_or_sconst.rs  operators.rs  precision.rs  qualified_name.rs  relation_expr.rs  role.rs  transaction_chain.rs  type_function_name.rs  work_or_transaction.rs
parser/src/: ascii_flags.rs  lexer_buffer.rs  lexer_error.rs  lib.rs  log_level.rs  token.rs  token_span.rs
parser/src/error/: has_location.rs  located_error_report.rs  mod.rs  parse_report.rs
parser/src/lexer/: char_buffer.rs  error.rs  keyword.rs  lexer_buffer.rs  lexer_error.rs  locatable.rs  location.rs  mod.rs  token_details.rs  token_kind.rs  token_span.rs
parser/src/parser/: acl_parsers.rs  all_or_var_name.rs  ast_node.rs  bit_string_parser.rs  boolean_or_string.rs  config.rs  const_numeric_parsers.rs  const_string_parsers.rs  consume_macro.rs  error.rs  expr_const_parser.rs  func_arg.rs  func_name.rs  func_name_parser.rs  func_type.rs  function_with_argtypes.rs  generic_reset.rs  generic_set_tail.rs  ident_parser.rs  located_combinator.rs  mod.rs  op_parsers.rs  opt_array_bounds.rs  opt_interval.rs  opt_precision.rs  opt_transaction.rs  opt_transaction_chain.rs  opt_unique_null_treatment.rs  parse_number.rs  parse_report.rs  privilege_parsers.rs  result.rs  role_parsers.rs  simple_typename.rs  stmt_parser.rs  (+12 more)
parser/system-stmt/: Cargo.toml
parser/transaction-mode-ast/: Cargo.toml
parser/transaction-mode-combinators/: Cargo.toml
parser/transaction-stmt/: Cargo.toml
parser/transaction-stmt-ast/: Cargo.toml
parser/transaction-stmt-combinators/: Cargo.toml
parser/type-combinators/: Cargo.toml
parser/utility-option-ast/: Cargo.toml
parser/utility-option-combinators/: Cargo.toml
parser/variable-stmt/: Cargo.toml
parser/xml-ast/: Cargo.toml
parser/xml-combinators/: Cargo.toml
(+1339 files in other folders)
