[workspace]
resolver = "3"

members = [
    "basics",
    "elog",
    "guc",
    "parser/ast",
    "parser/combinators",
    "parser/core",
    "parser/lexer",
    "parser/parser",
]

[workspace.package]
edition = "2024"
version = "19.0.0-devel"

[workspace.lints.clippy]
alloc_instead_of_core = "forbid"
items_after_test_module = "allow"
std_instead_of_alloc = "forbid"
std_instead_of_core = "forbid"
useless_conversion = "deny"

[workspace.lints.rust]
unused_imports = "deny"
macro_expanded_macro_exports_accessed_by_absolute_paths = "warn"

[workspace.dependencies]
assert_matches = "1"
bitflags = "2"
bitvec = "1"
derive_more = "2"
lazy_static = "1"
test-case = "3"
thiserror = "2"

pg-ast = { path = "parser/ast" }
pg-basics = { path = "basics" }
pg-combinators = { path = "parser/combinators", features = [] }
pg-elog = { path = "elog" }
pg-guc = { path = "guc" }
pg-lexer = { path = "parser/lexer" }
pg-parser = { path = "parser/parser" }
pg-parser-core = { path = "parser/core" }
