[package]
name = "postgres-parser"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
bitvec.workspace = true
thiserror.workspace = true
postgres-basics.workspace = true

[dev-dependencies]
assert_matches.workspace = true
test-case.workspace = true
