[package]
name = "pg-ast"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from", "display", "error"] }
pg-basics.workspace = true
pg-elog.workspace = true
pg-generic-set-ast.workspace = true
pg-sink-ast.workspace = true
pg-transaction-mode-ast.workspace = true
