[package]
name = "pg-ast"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from", "display", "error"] }
pg-basics.workspace = true
pg-database-stmt-ast.workspace = true
pg-elog.workspace = true
pg-generic-set-ast.workspace = true
pg-interval-ast.workspace = true
pg-role-ast.workspace = true
pg-sink-ast.workspace = true
pg-transaction-stmt-ast.workspace = true
pg-utility-option-ast.workspace = true
pg-xml-ast.workspace = true
