[package]
name = "pg-check-point-stmt"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-utility-option-ast.workspace = true
pg-utility-option-combinators.workspace = true

[dev-dependencies]
test-case.workspace = true
