[package]
name = "pg-collation-stmt"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-ast.workspace = true
pg-basics.workspace = true
pg-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-sink-ast.workspace = true
pg-sink-combinators.workspace = true
