[package]
name = "pg-database-stmt"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-combinators.workspace = true
pg-database-stmt-ast.workspace = true
pg-generic-set-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-sink-combinators.workspace = true

[dev-dependencies]
test-case.workspace = true
