[package]
name = "pg-identifier-combinators"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-ast.workspace = true
pg-basics.workspace = true
pg-combinators.workspace = true
pg-elog.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
