[package]
name = "pg-parser"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
pg-ast.workspace = true
pg-basics.workspace = true
pg-collation-stmt.workspace = true
pg-combinators.workspace = true
pg-conversion-stmt.workspace = true
pg-elog.workspace = true
pg-event-trigger-stmt.workspace = true
pg-generic-options-combinators.workspace = true
pg-generic-set-combinators.workspace = true
pg-interval-ast.workspace = true
pg-interval-combinators.workspace = true
pg-language-stmt.workspace = true
pg-large-object-stmt.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-sink-ast.workspace = true
pg-sink-combinators.workspace = true
pg-system-stmt.workspace = true
pg-transaction-stmt-ast.workspace = true
pg-transaction-stmt.workspace = true
pg-type-combinators.workspace = true
pg-xml-ast.workspace = true
pg-xml-combinators.workspace = true

[dev-dependencies]
assert_matches.workspace = true
test-case.workspace = true
