[package]
name = "pg-parser"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
pg-ast.workspace = true
pg-basics.workspace = true
pg-combinators.workspace = true
pg-elog.workspace = true
pg-generic-set-combinators.workspace = true
pg-interval-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-role-stmt.workspace = true
pg-sink-combinators.workspace = true
pg-transaction-stmt.workspace = true
pg-type-combinators.workspace = true
pg-utility-option-combinators.workspace = true
pg-variable-stmt.workspace = true
pg-xml-combinators.workspace = true

[dev-dependencies]
assert_matches.workspace = true
test-case.workspace = true
