[package]
name = "pg-parser"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["debug", "from"] }
pg-ast.workspace = true
pg-basics.workspace = true
pg-elog.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true

[dev-dependencies]
assert_matches.workspace = true
test-case.workspace = true

[features]
default = ["tuple_combinators"]
tuple_combinators = []
