[package]
name = "pg-role-ast"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
pg-basics.workspace = true
pg-generic-options-ast.workspace = true
pg-generic-set-ast.workspace = true
pg-sink-ast.workspace = true
