[package]
name = "pg-role-stmt"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-basics.workspace = true
pg-combinators.workspace = true
pg-elog.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-role-ast.workspace = true
pg-sink-ast.workspace = true
pg-sink-combinators.workspace = true

[dev-dependencies]
test-case.workspace = true
