[package]
name = "pg-role-stmt"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-ast.workspace = true
pg-basics.workspace = true
pg-combinators.workspace = true
pg-elog.workspace = true
pg-generic-options-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-sink-combinators.workspace = true
pg-variable-stmt.workspace = true

[dev-dependencies]
test-case.workspace = true
