[package]
name = "pg-system-stmt"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-ast.workspace = true
pg-combinators.workspace = true
pg-generic-set-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-sink-ast.workspace = true
pg-sink-combinators.workspace = true

[dev-dependencies]
test-case.workspace = true
