[package]
name = "pg-transaction-stmt-combinators"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-transaction-stmt-ast.workspace = true

[dev-dependencies]
test-case.workspace = true
