[package]
name = "pg-utility-option-combinators"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-combinators.workspace = true
pg-generic-set-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-sink-combinators.workspace = true
pg-utility-option-ast.workspace = true

[dev-dependencies]
test-case.workspace = true
