[package]
name = "pg-variable-stmt"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-basics.workspace = true
pg-combinators.workspace = true
pg-generic-set-ast.workspace = true
pg-generic-set-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
