[package]
name = "pg-variable-stmt"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pg-ast.workspace = true
pg-basics.workspace = true
pg-combinators.workspace = true
pg-elog.workspace = true
pg-generic-set-combinators.workspace = true
pg-interval-combinators.workspace = true
pg-lexer.workspace = true
pg-parser-core.workspace = true
pg-sink-combinators.workspace = true
pg-transaction-stmt.workspace = true
pg-xml-combinators.workspace = true

[dev-dependencies]
test-case.workspace = true
